--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
 credentials =
-    ,,
-    testgithub,testusr10,Argo@112
-    testgithub@gmail.com,testusr10,Argo@112
+    ,testusr10,Argo@112,Email cannot be blank
+    testgithub1@gmail.com,,Argo@112,Username cannot be blank
+    testgithub1@gmail.com,testusr10,,Password cannot be blank
