--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,7 @@ TC_signup_001 =
     ,testusr10,Argo@112,Email cannot be blank
     testgithub1@gmail.com,,Argo@112,Username cannot be blank
     testgithub1@gmail.com,testusr10,,Password cannot be blank
+
+TC_signin_001 =
+    testusr24,Argo@112
+    srkvd26,Argo@112
